---
source: compiler-core/src/parse/tests.rs
assertion_line: 957
expression: "\nfn main() {\n    case 1 {\n        -> -> 0\n    }\n}\n"
---
----- SOURCE CODE

fn main() {
    case 1 {
        -> -> 0
    }
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:4:9
  │
4 │         -> -> 0
  │         ^^ I was not expecting this

Found `->`, expected one of: 
- `}`
- a case clause
